Fix main content clipped at the bottom

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -19,6 +19,10 @@ h1.app-name {
   margin-left: 8px;
 }
 
+mat-sidenav-content {
+  box-sizing: border-box;
+}
+
 .app-content {
   padding: 16px 24px;
   max-width: 960px;
